registry/kubefirst/components/vault/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.kubefirst.dev`)
      services:
        - name: vault
          port: 80
  tls:
    secretName: vault-tls
